Fix page editor white space issues

--- a/javascript/CBPageInformationEditorView.css
+++ b/javascript/CBPageInformationEditorView.css
@@ -1,8 +1,3 @@
-.CBPageInformationEditor {
-    background-color: hsl(0, 0%, 90%);
-    padding: 22px 0;
-}
-
 .CBPageInformationEditor .CBStringEditorWithTextArea,
 .CBPageInformationEditor .CBPublicationControl,
 .CBPageInformationEditor .CBPageURIControl {
@@ -28,10 +23,6 @@
     margin: 0 auto;
     max-width: 100%;
     width: 640px;
-}
-
-.CBPageInformationEditor .panel + .panel {
-    margin-top: 44px;
 }
 
 @media all and (min-width: 640px) {
